# SplashTop_Pro

./: .gitignore  FINAL_WORKING_README.md  LINUX_KEYRING_FIX_README.md  MVP_README.md  README.md  REAL_PROJECT_README.md  WORKING_PROJECT_README.md  WORKING_SYSTEM_README.md  fix_linux_keyring.sh  start_final_working.sh  start_full_project.sh  start_mvp.sh  start_real_project.sh  start_splashtop.sh  start_working_auth.sh  start_working_project.sh
Splashtop-Server/: .gitignore  README.md  env.example  package-lock.json  package.json
Splashtop-Server/src/: app.controller.ts  app.module.ts  main.ts
Splashtop-Server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
Splashtop-Server/src/auth/dto/: register.dto.ts
Splashtop-Server/src/auth/strategies/: jwt.strategy.ts
Splashtop-Server/src/streamers/: streamers.controller.ts  streamers.module.ts  streamers.service.ts
Splashtop-Server/src/streamers/entities/: streamer.entity.ts
Splashtop-Server/src/users/: users.controller.ts  users.service.ts
Splashtop-Server/src/users/entities/: user.entity.ts
Splashtop-Server/src/webrtc/: webrtc.gateway.ts  webrtc.module.ts  webrtc.service.ts
Splashtop-Streamer/: .gitignore  CMakeLists.txt  CMakeLists_test.txt  DEVELOPMENT.md  MILESTONE_1_COMPLETE.md  README.md  build.bat  build.sh  simple_streamer  test_streamer  test_streamer.cpp  test_webrtc.cpp
Splashtop-Streamer/include/: input_injector.h  platform.h  screen_capture.h  splashtop_app.h  video_encoder.h  webrtc_streamer.h
Splashtop-Streamer/src/: ffmpeg_video_encoder.cpp  input_injector_linux.cpp  main.cpp  real_streamer.cpp  screen_capture_linux.cpp  simple_streamer.cpp  splashtop_app.cpp  webrtc_streamer.cpp  webrtc_streamer_simple.cpp  webrtc_streamer_unix.cpp  webrtc_streamer_windows.cpp  windows_input_injector.cpp  windows_screen_capture.cpp
Splashtop_Client/: APP_DEMO.md  README.md  debug_token.dart  debug_user.dart  pubspec.yaml  pubspec.yaml.backup  pubspec_simple.yaml  run_demo.sh  run_test.sh  simple_test.dart  test_auth.dart  test_jwt.dart  test_jwt_secret.dart  test_streamer.sh
Splashtop_Client/android/app/src/main/: AndroidManifest.xml
Splashtop_Client/android/app/src/main/kotlin/com/example/splashtop_client/: MainActivity.kt
Splashtop_Client/lib/: main.dart  main.dart.backup  main_simple.dart
Splashtop_Client/lib/models/: pc.dart  pc.g.dart  user.dart  user.g.dart
Splashtop_Client/lib/providers/: auth_provider.dart  pc_list_provider.dart
Splashtop_Client/lib/screens/: home_screen.dart  login_screen.dart  streaming_screen.dart  streaming_screen_real.dart  streaming_screen_simple.dart  streaming_screen_working.dart  test_login_screen.dart
Splashtop_Client/lib/services/: api_service.dart  auth_service.dart  webrtc_service.dart  webrtc_service_simple.dart
Splashtop_Client/lib/utils/: constants.dart
Splashtop_Client/linux/: CMakeLists.txt
Splashtop_Client/macos/Flutter/: GeneratedPluginRegistrant.swift
Splashtop_Client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
Splashtop_Client/macos/Runner/Configs/: AppInfo.xcconfig
Splashtop_Client/test/: widget_test.dart
Splashtop_Client/web/: index.html  manifest.json
Splashtop_Client/windows/runner/: Runner.rc  main.cpp
splashtop_client/: pubspec.yaml
splashtop_client/android/app/: build.gradle.kts
splashtop_client/ios/Runner/: Info.plist
splashtop_client/ios/Runner.xcodeproj/: project.pbxproj
splashtop_client/lib/: main.dart
splashtop_client/lib/models/: pc.dart  pc.g.dart  user.dart
splashtop_client/lib/providers/: pc_list_provider.dart
splashtop_client/lib/screens/: login_screen.dart  streaming_screen.dart
splashtop_client/lib/services/: auth_service.dart  auth_service.g.dart  webrtc_service.dart
splashtop_client/lib/utils/: constants.dart
splashtop_client/linux/runner/: my_application.cc
splashtop_client/macos/Runner.xcodeproj/: project.pbxproj
splashtop_client/windows/: CMakeLists.txt
